<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".view.activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:gravity="center"
        android:text="@string/login_now"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:id="@+id/ll_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:hint="@string/user_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dimen_16dp"
                    android:padding="@dimen/dimen_18dp"
                    android:textSize="@dimen/hint_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/tertiary_text_light"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dimen_16dp"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_18dp"
                    android:textSize="@dimen/hint_text_size"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@android:color/holo_blue_dark"
                android:includeFontPadding="false"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

    </ScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_8dp"
        > <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/new_user"
        android:textSize="@dimen/text_size_14sp"

        />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_registernow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txt_newuser"
            android:layout_marginStart="@dimen/dimen_2dp"
            android:fontFamily="sans-serif"
            android:text="@string/txt_register_now"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_toRightOf="@+id/txt_newuser"
            android:layout_marginLeft="@dimen/dimen_2dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>