<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_4dp"
        android:layout_marginBottom="@dimen/dimen_4dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:padding="@dimen/dimen_4dp"
        android:text="@string/txt_add_to_cart"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200dp" />

            <TextView
                android:id="@+id/txt_det_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_product"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/txt_product_name" />

            <TextView
                android:id="@+id/txt_det_name_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_name"
                android:text="@string/txt_product_name"
                android:textSize="@dimen/text_size_18sp"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/txt_det_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_name_val"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/txt_description" />

            <TextView
                android:id="@+id/txt_det_type_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_type"
                android:text="@string/txt_description"
                android:textSize="@dimen/text_size_18sp"
                android:textColor="@android:color/black"
                />
            <TextView
                android:id="@+id/txt_det_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_type_val"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/txt_description" />

            <TextView
                android:id="@+id/txt_det_desc_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_desc"
                android:text="@string/txt_description"
                android:textSize="@dimen/text_size_18sp"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/txt_det_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_desc_val"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/txt_quantity" />

            <TextView
                android:id="@+id/txt_det_quantity_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_quantity"
                android:text="@string/txt_quantity"
                android:textSize="@dimen/text_size_18sp"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/txt_det_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_quantity_val"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/txt_price" />

            <TextView
                android:id="@+id/txt_det_price_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_det_price"
                android:text="@string/txt_price"
                android:textSize="@dimen/text_size_20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>